--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,12 @@ GENERAL PAGE RULES
     padding: 0;
     box-sizing: border-box;
 }
-section .container-fluid{
-    max-width: 90%;
+section .container-xs{
+    width: 80%;
     margin: 0 auto;
+}
+section {
+    padding: 1rem 0;
 }
 /****************************
 NAVBAR RULES
@@ -63,32 +66,187 @@ nav li:hover{
     nav ul {
         display: none;
     }
+    section .container-xs{
+        max-width: 90%;
+        margin: 0 auto;
+    }
 }
 @media all and (min-width:678px){
     nav .hamburgher-btn{
         display: none;
     }
-    section .container-fluid{
-        max-width: 90%;
-        margin: 0 auto;
-    }
+}
+/****************************
+JUMBOTRON RULES
+*****************************/
+div .jumbo-img{
+    max-width: 45%;
+    margin: 0 auto;
+}
+div .jumbo-img img{
+    width: 300px;
+    margin: 2rem 0;
+}
+div .jumbo-title h2 {
+    color: white;
+    margin: 0;
+}
+div.draw {
+    margin: 0.5rem 0;
+}
+div .line{
+    width: 70px;
+    margin: 0 0.5rem;
+    height: 3px;
+    background-color: white;
+    display: block;
+    align-self: center;
+}
+div .star{
+    display: block;
+    align-self: center;
+}
+div.jumbo-txt{
+    margin-bottom: 2rem;
+}
+div .jumbo-txt ul{
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.jumbo-txt li{
+    margin: 0 1rem;
+    display: block;
+    align-self: center;
+}
+.star i{
+    color: white;
+}
+div.jumbo-txt li h3{
+    font-size: 1rem;
+    margin: 0;
+}
+div.jumbo-txt li a{
+    text-decoration: none;
+    color: white;
+}
+div.jumbo-txt span{
+    color: white;
+    font-size: 1rem;
+}
+/* media query */
+/****************************
+PORTFOLIO SECTION RULES
+*****************************/
+div.black .line{
+    background-color: black;
+}
+div.black .star i {
+    color: black;
+}
+div.col-12 h3 {
+    margin: 0.5rem 0;
+}
+div.img-box img{
+    max-width: 100%;
+    padding: 1rem;
+}
+/****************************
+ABOUT SECTION RULES
+*****************************/
+div.btn a{
+    color: white;
+    text-decoration: none;
+    display: block;
+}
+div.btn{
+    display: flex;
+    padding: 0.5rem;
+    border: 1px solid white;
+    margin: 2rem;
+
+}
+/****************************
+CONTACT ME SECTION RULES
+*****************************/
+div.send-btn{
+    background-color: #1abc9c;
+    max-width: fit-content;
+    padding: 0.5rem;
+    border-radius: 5px;
+    margin: 5px 0;
+}
+div.send-btn a{
+    color: white;
+    text-decoration: none;
+}
+#floatingTextarea2_border{
+    border: none;
+    border-bottom: 1px solid lightgrey;
+    border-radius: 0;
+}
+/****************************
+FOOTER RULES
+*****************************/
+footer h6,
+footer p,
+footer li i{
+    color: white;
+}
+footer a.color-green{
+    color: #1abc9c;
+    text-decoration: none;
+}
+footer .a-white a{
+    color: white;
+    text-decoration: none;
+}
+footer .a-white{
+    margin: 2rem 0;
+}
+footer ul{
+    display: flex;
+    list-style: none;
+    justify-content: center;
+    padding: 0;
+    margin-bottom: 2rem;
+}
+footer ul li{
+    margin: 0 0.5rem;
+    border: 1px solid white;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+footer ul li a{
+    display: flex;
+    text-decoration: none;
+}
+footer ul li a i{
+    display: block;
+    align-self: center;
+}
+footer span{
+    color: white;
+    font-size: 0.7rem;
+}
+.black{
+    color: black;
+}
+.white{
+    color: white;
 }
 .green{
     background-color: #1abc9c;
-    /* debug */
-    min-height: 300px;
 }
-.white {
-    /* debug */
-    min-height: 400px;
-}
+
 .light-grey {
     background-color: #3a546d;
-    /* debug */
-    min-height: 200px;
 }
 .dark-grey{
     background-color: #2c3e50;
-    /* debug */
-    min-height: 50px;
 }
