--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ NAVBAR RULES
     left: 0;
     z-index: 1000;
     height: 90px;
+    background-color: #2c3e50;
 }
 #nav .navbar-expand-lg{
     background-color: #2c3e50;
@@ -78,10 +79,11 @@ nav .col-12 a{
 
 /* media queryes */
 /*  */
-@media all and (max-width:578px){
+@media all and (max-width:576px){
     .navbar{
         width: 100%;
         margin: 0 auto;
+        background-color: #2c3e50;
     }
     nav .hamburgher-btn{
         display: flex;
